# iwbc

./: CMakeLists.txt  README.md  rules
examples/: lexer_example.c
include/: generator.h  lexer.h  parser.h
src/: generator.c  lexer.c  main.c  parser.c
test/: CMakeCache.txt  base.iwb  lexer_test.c  program  program_optimized  run  test2.bc  test2.iwb  test2.ll  test2.opt.bc  test2.opt.s  test2.s  testme  testx.iwb
